Change made to fix the winner view bug and cleaned up some code for readability

--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,14 @@ button:hover {
   color: #E8F6EF;
 }
 
-.fighters {
+.game-view {
 	flex: 4;
 	text-align: center;
 	padding:10px;
+}
+
+.fighter {
+	background: transparent;
 }
 
 .computer-side,
